refactor v2 - scriptle calculate etmede hatalar oluştu. onun harici %90 bitti